--- a/q/18028.html
+++ b/q/18028.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>Vyxal</td><td>240805T060010Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274687#274687">emanresu</a></td></tr>
-<tr d-ix="1"><td>000</td><td>brainfuck</td><td>240805T044358Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274685#274685">Andrew B</a></td></tr>
-<tr d-ix="2"><td>099</td><td>JavaScript Node.js</td><td>240804T231107Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274683#274683">Andrew B</a></td></tr>
+<tr d-ix="0"><td>100</td><td>JavaScript Node.js</td><td>240804T231107Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274683#274683">Andrew B</a></td></tr>
+<tr d-ix="1"><td>047</td><td>Vyxal</td><td>240805T060010Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274687#274687">emanresu</a></td></tr>
+<tr d-ix="2"><td>000</td><td>brainfuck</td><td>240805T044358Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274685#274685">Andrew B</a></td></tr>
 <tr d-ix="3"><td>480</td><td>JavaScript Node.js</td><td>240615T181749Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/273676#273676">Polymati</a></td></tr>
 <tr d-ix="4"><td>047</td><td>Japt</td><td>240613T222702Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/273656#273656">Patcail</a></td></tr>
 <tr d-ix="5"><td>736</td><td>Swift 5.9</td><td>230723T011016Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/263195#263195">macOSist</a></td></tr>
@@ -125,34 +125,37 @@
 <tr d-ix="96"><td>nan</td><td>GolfScript</td><td>140109T101332Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/18064#18064">Ilmari K</a></td></tr>
 <tr d-ix="97"><td>101</td><td>C++</td><td>140109T014031Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/18042#18042">user1076</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 47 bytes, <span class="math-container">\$G^{26}(26)\$</span></h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 100 bytes,</h1>
+<p>score: <S> 10 ↑↑ 111 </s> <span class="math-container">$$ 10 ↑^{110} 110   $$</span></p>
+
+<pre class="lang-javascript prettyprint-override"><code>o=+!+[]
+g=n=&gt;n?(''+o+g(n-o))-o:o
+k=(n,z)=&gt;n?(z?k:g)(k(n-o,z),z-o):o
+console.log(k(r=(''+o+o+o)-o,r))
+</code></pre>
+<p><a href="https://tio.run/##JYxBCoQwEATv/sKTGZL4AGH0IcseRCVoZFqi7CGfj7NK37qK2sbfeE5pPS4vmJdSwLa2n28VWLiXwTSNhQ1GPIg8OlSRjbhMD8xD7AKZ@Mf6uayWKhPkxL60O4KyxG9EpwWXiEq5AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>EDIT: After thinking it over, I concluded that I don't need to use BigInt for the following reason: both BigInt and regular int are going to be maxed out by the numbers needed to do the calculation, so I've used int, based on the assumption that MAX_SAFE_INTEGER is very large.</p>
+<p>My code is based on the following functions:</p>
+<p><span class="math-container">$$ g(n) = 10^n $$</span>
+<span class="math-container">$$ k(n,z) = 10 ↑^{z} n $$</span></p>
+<p>As a result the code outputs the following number (approx)</p>
+<p><span class="math-container">$$ 10 ↑^{110} 110   $$</span></p>
+<p>I say approx because to save space, I only used 1's in the code.</p>
+<p>The byte count is 100, which means a penalty of 1,000,000 which is negligible given the size of the number output.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 47 bytes, <span class="math-container">\$G^{26}(26)\$</span></h1>
 <pre><code>nL:(&amp;⇧{:|wλ¥≥[¥τ:ẏṘvxZ;Mh&amp;›λ-[∩÷vx¥$e*∑;†‹←›→}→
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJuTDooJuKHp3s6fHfOu8Kl4omlW8Klz4Q64bqP4bmYdnhaO01oJuKAus67LVviiKnDt3Z4wqUkZSriiJE74oCg4oC54oaQ4oC64oaSfeKGkiIsIiIsIjMiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>This computes the <a href="https://en.wikipedia.org/wiki/Goodstein%27s_theorem" rel="nofollow noreferrer">Goodstein function</a> of 26, 26 times. The code is a mess and I don't feel like explaining it right now. To the best of my understanding, this is bounded above by all the solutions that use <span class="math-container">\$f_{\epsilon}\$</span> or anything larger.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 50 bytes - score approx 10^16,000,000</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 50 bytes - score approx 10^16,000,000</h1>
 <pre><code>+&gt;+++++[-&gt;+++++++++++&lt;]&gt;++[&gt;-]&gt;&gt;&gt;+&gt;[[&gt;]&lt;-&lt;[&lt;]&lt;.&gt;&gt;]
 </code></pre>
 <p><a href="https://tio.run/##SypKzMxLK03O/v9f204bBKJ1ITQE2MQCedF2urF2dnbadtHRdrE2ujbRNrE2enZ2sf//AwA" rel="nofollow noreferrer" title="brainfuck – Try It Online">Try it online!</a></p>
 <p>I decided to try to print a big number in brainfuck. On TIO, I ran a program to check the length of the tape - it's about 65,000 cells.</p>
 <p>So, the number I output is approx:</p>
 <p><span class="math-container">$$ 10^{65000*255} $$</span></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 99 bytes, score 10 ↑↑ 111</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>o=BigInt(+!+[])
-g=n=&gt;BigInt(n?''+o+g(n-o):o)
-f=n=&gt;n?g(f(n-o)):o
-console.log(f(BigInt(''+o+o+o))+'')
-</code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/39YpM90zr0RDW1E7OlaTK902z9YOKpRnr66una@drpGnm69pla/JlQaSzLNP10gDCwHFuJLz84rzc1L1cvJBolCNYG1AqKmpra6u@f8/AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>My answer is based on the following functions:</p>
-<p><span class="math-container">$$ g(n) = 10^n $$</span>
-<span class="math-container">$$ f(n) = g(f(n-1)), f(0) = 1 $$</span></p>
-<p>Thus the number printed is roughly 10 ↑↑ 111</p>
-<p>I say roughly because to save space, I only used 1's in the code.</p>
-<p>The byte count is 99, which means a penalty of approx 1,000,000 Which is negligible given the size of the number output.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, H<sub>PTO(Z<sub>2</sub>)</sub>(1000), 480 bytes</h1>
 <p>Since lim(BMS)[1000]/480 is still way greater than lim(BMS)[26]/47, I decided to implement Pointer Matrix System, a version of BMS that I understand better than Flattened AMS.</p>
