--- a/q/18028.html
+++ b/q/18028.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>100</td><td>JavaScript Node.js</td><td>240804T231107Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274683#274683">Andrew B</a></td></tr>
+<tr d-ix="0"><td>099</td><td>JavaScript Node.js</td><td>240804T231107Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274683#274683">Andrew B</a></td></tr>
 <tr d-ix="1"><td>047</td><td>Vyxal</td><td>240805T060010Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274687#274687">emanresu</a></td></tr>
 <tr d-ix="2"><td>000</td><td>brainfuck</td><td>240805T044358Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/274685#274685">Andrew B</a></td></tr>
 <tr d-ix="3"><td>480</td><td>JavaScript Node.js</td><td>240615T181749Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/273676#273676">Polymati</a></td></tr>
@@ -125,23 +125,23 @@
 <tr d-ix="96"><td>nan</td><td>GolfScript</td><td>140109T101332Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/18064#18064">Ilmari K</a></td></tr>
 <tr d-ix="97"><td>101</td><td>C++</td><td>140109T014031Z</td><td><a href="https://codegolf.stackexchange.com/questions/18028/largest-number-printable/18042#18042">user1076</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 100 bytes,</h1>
-<p>score: <S> 10 ↑↑ 111 </s> <span class="math-container">$$ 10 ↑^{110} 110   $$</span></p>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 99 bytes</h1>
+<p>score: <span class="math-container">$$ 10 ↑^{10↑^{10}10} 10 $$</span></p>
 
 <pre class="lang-javascript prettyprint-override"><code>o=+!+[]
-g=n=&gt;n?(''+o+g(n-o))-o:o
-k=(n,z)=&gt;n?(z?k:g)(k(n-o,z),z-o):o
-console.log(k(r=(''+o+o+o)-o,r))
+k=(n,z)=&gt;n?(z?k:g=n=&gt;n?(''+o+g(n-o)):o)(k(n-o,z),z-o):o
+console.log(k(k(r=(''+o+o)-o,r),r))
 </code></pre>
-<p><a href="https://tio.run/##JYxBCoQwEATv/sKTGZL4AGH0IcseRCVoZFqi7CGfj7NK37qK2sbfeE5pPS4vmJdSwLa2n28VWLiXwTSNhQ1GPIg8OlSRjbhMD8xD7AKZ@Mf6uayWKhPkxL60O4KyxG9EpwWXiEq5AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>EDIT: After thinking it over, I concluded that I don't need to use BigInt for the following reason: both BigInt and regular int are going to be maxed out by the numbers needed to do the calculation, so I've used int, based on the assumption that MAX_SAFE_INTEGER is very large.</p>
+<p><a href="https://tio.run/##JYvBCoMwEETv/oUnd4n6AYGtH1I8BCtBIzslFg/5@bhtYQ6PmTd7uMK55O39GRSvtVaIa91zbpKQ9oXloROVKfko@uOuc3CRdACzB1P6ool9scajWaAnjnU8EG1LlOV/AZuW2cK13g" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>EDIT: After thinking it over, I concluded that I don't need to use BigInt for the following reason: both BigInt and regular int are going to be maxed out by the numbers needed to do the calculation, so I've used int, based on the assumption that MAX_SAFE_INTEGER large enough.</p>
 <p>My code is based on the following functions:</p>
 <p><span class="math-container">$$ g(n) = 10^n $$</span>
 <span class="math-container">$$ k(n,z) = 10 ↑^{z} n $$</span></p>
+<p>Note that k is just a function, so after a bit of tweaking, I was able to pass the result from k() back into k().</p>
 <p>As a result the code outputs the following number (approx)</p>
-<p><span class="math-container">$$ 10 ↑^{110} 110   $$</span></p>
+<p><span class="math-container">$$ 10 ↑^{10↑^{10}10} 10 $$</span></p>
 <p>I say approx because to save space, I only used 1's in the code.</p>
-<p>The byte count is 100, which means a penalty of 1,000,000 which is negligible given the size of the number output.</p>
+<p>The byte count is 99, which means a penalty of approx 1,000,000 which is negligible given the size of the number output.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 47 bytes, <span class="math-container">\$G^{26}(26)\$</span></h1>
 <pre><code>nL:(&amp;⇧{:|wλ¥≥[¥τ:ẏṘvxZ;Mh&amp;›λ-[∩÷vx¥$e*∑;†‹←›→}→
