--- a/q/210976.html
+++ b/q/210976.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>024</td><td>Raku Perl 6 rakudo</td><td>240804T205604Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/274677#274677">bb94</a></td></tr>
-<tr d-ix="1"><td>042</td><td>Acc!!</td><td>240509T090248Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273029#273029">emanresu</a></td></tr>
-<tr d-ix="2"><td>014</td><td>Befalse quirkster</td><td>240520T051650Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273190#273190">Bubbler</a></td></tr>
+<tr d-ix="0"><td>014</td><td>Befalse quirkster</td><td>240520T051650Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273190#273190">Bubbler</a></td></tr>
+<tr d-ix="1"><td>024</td><td>Raku Perl 6 rakudo</td><td>240804T205604Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/274677#274677">bb94</a></td></tr>
+<tr d-ix="2"><td>042</td><td>Acc!!</td><td>240509T090248Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273029#273029">emanresu</a></td></tr>
 <tr d-ix="3"><td>021</td><td>Befalse</td><td>240518T051359Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273173#273173">Adelie</a></td></tr>
 <tr d-ix="4"><td>010</td><td>Pip</td><td>240517T153055Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273168#273168">DLosc</a></td></tr>
 <tr d-ix="5"><td>019</td><td>🕳️</td><td>240517T131838Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/273166#273166">None1</a></td></tr>
@@ -160,20 +160,7 @@
 <tr d-ix="131"><td>034</td><td>Python 3</td><td>200912T132841Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/210981#210981">Jonathan</a></td></tr>
 <tr d-ix="132"><td>008</td><td>Pyth</td><td>200912T132447Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/210979#210979">Mukundan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 24 bytes</h1>
-<pre class="lang-perl prettyprint-override"><code>(&quot;L&quot;,|(&quot;ol&quot;xx*))&gt;&gt;.print
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMGCpaUlaboWOzSUfJR0ajSU8nOUKiq0NDXt7PQKijLzSiDSUFUw1QA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Acc!!" rel="nofollow noreferrer">Acc!!</a>, 42 bytes</h1>
-<pre><code>Count i while 1 {
-Write 108-32*0^i+i*3%6
-}
-</code></pre>
-<p><a href="https://tio.run/##S0xOTkr6/985vzSvRCFToTwjMydVwVChmiu8KLMEyDKw0DU20jKIy9TO1DJWNeOq/f8fAA" rel="nofollow noreferrer" title="Acc!! – Try It Online">Try it online!</a> -2 thanks to DLosc.</p>
-<p><code>0^i</code> is <code>1</code> when <code>i</code> is 0 and <code>0</code> otherwise, so when <code>i</code> is <code>0</code> the expression evaluates to <code>108-32+0=76=&quot;L&quot;</code>. Otherwise, it alternates between <code>o</code> (111) and <code>l</code>(108) thanks to the <code>i*3%6</code> term.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.quirkster.com/iano/js/befalse.html" rel="nofollow noreferrer">Befalse (quirkster)</a>, 14 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.quirkster.com/iano/js/befalse.html" rel="nofollow noreferrer">Befalse (quirkster)</a>, 14 bytes</h1>
 <pre><code>&quot;loL&quot;.^^.4{1{;
 </code></pre>
 <p><a href="https://www.quirkster.com/iano/js/befalse.html" rel="nofollow noreferrer">Try it!</a> (Usage: copy-paste into the code box, click Show above it, and use Step to run it step-by-step. Warning: Run will lock your browser.)</p>
@@ -199,6 +186,25 @@ Write 108-32*0^i+i*3%6
 .      Print o
        Infinite loop, printing l and o in order afterwards
 </code></pre>
+<h2>18 bytes</h2>
+<pre><code>&quot;loL&quot;\
+/^.\!/
+\^./
+</code></pre>
+<p>The best I can come up with that avoids everything interpreter-specific.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 24 bytes</h1>
+<pre class="lang-perl prettyprint-override"><code>(&quot;L&quot;,|(&quot;ol&quot;xx*))&gt;&gt;.print
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMGCpaUlaboWOzSUfJR0ajSU8nOUKiq0NDXt7PQKijLzSiDSUFUw1QA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Acc!!" rel="nofollow noreferrer">Acc!!</a>, 42 bytes</h1>
+<pre><code>Count i while 1 {
+Write 108-32*0^i+i*3%6
+}
+</code></pre>
+<p><a href="https://tio.run/##S0xOTkr6/985vzSvRCFToTwjMydVwVChmiu8KLMEyDKw0DU20jKIy9TO1DJWNeOq/f8fAA" rel="nofollow noreferrer" title="Acc!! – Try It Online">Try it online!</a> -2 thanks to DLosc.</p>
+<p><code>0^i</code> is <code>1</code> when <code>i</code> is 0 and <code>0</code> otherwise, so when <code>i</code> is <code>0</code> the expression evaluates to <code>108-32+0=76=&quot;L&quot;</code>. Otherwise, it alternates between <code>o</code> (111) and <code>l</code>(108) thanks to the <code>i*3%6</code> term.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.esolangs.org/wiki/Befalse" rel="nofollow noreferrer">Befalse</a>, <s>23</s> 21 bytes</h1>
 <p><em>-2 bytes from emanresu a</em></p>
