--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240806T052023Z
+"   /golfscore                                      20240806T054141Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/266739.html">Print ASCII building                            : 0266739</a>
 <a href="q/219576.html">Print 0 to 100 without 1-9 characters           : 0219576</a>
 <a href="q/210976.html">Lolololololololololololol                       : 0210976</a>
 <a href="q/274665.html">Lexicographically earliest permutation of the in: 0274665</a>
