--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240806T070523Z
+"   /golfscore                                      20240806T074822Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/241357.html">Implement an argwhere function                  : 0241357</a>
 <a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
 <a href="q/62886.html">Tiny Lisp tiny interpreter                      : 0062886</a>
 <a href="q/217537.html">The first published picture of the Mandelbrot se: 0217537</a>
