--- a/q/274665.html
+++ b/q/274665.html
@@ -26,28 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>163</td><td>JavaScript Node.js</td><td>240806T032444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274718#274718">l4m2</a></td></tr>
-<tr d-ix="1"><td>178</td><td>JavaScript ES7</td><td>240805T201142Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274713#274713">Arnauld</a></td></tr>
-<tr d-ix="2"><td>105</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
-<tr d-ix="3"><td>224</td><td>Picat</td><td>240805T050107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274686#274686">Bubbler</a></td></tr>
-<tr d-ix="4"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
-<tr d-ix="5"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
+<tr d-ix="0"><td>253</td><td>Julia</td><td>240806T081152Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274726#274726">Carl</a></td></tr>
+<tr d-ix="1"><td>163</td><td>JavaScript Node.js</td><td>240806T032444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274718#274718">l4m2</a></td></tr>
+<tr d-ix="2"><td>178</td><td>JavaScript ES7</td><td>240805T201142Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274713#274713">Arnauld</a></td></tr>
+<tr d-ix="3"><td>105</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
+<tr d-ix="4"><td>224</td><td>Picat</td><td>240805T050107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274686#274686">Bubbler</a></td></tr>
+<tr d-ix="5"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
+<tr d-ix="6"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 163 bytes</h1>
+<div id="pu0" class="pu"><h2>Julia, 253 bytes</h2>
+<p>We restrict ourselves to cases n &lt;= 16 because a solution exists only in these cases. (Bubbler gives the proof in the comments.)</p>
+<pre><code>using Combinatorics;P=[[],[],[2],[3],[2],[5],[2,3],[7],[2],[3],[2,5],[11],[2,3],[13],[2,7],[2,3],[2]];f(n)=for s in permutations(collect(0:n)) d(k,p)=k&gt;n+1 ? false : s[k]%p==0; all(all(d(i,p)!=d(i+2,p) for p in P[s[i+1]+1]) for i in 1:n) &amp;&amp; return s end
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 163 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,i=0,...p)=&gt;1/p[n]?p.every((v,j)=&gt;!j||v&lt;2|p.every((u,k)=&gt;k&gt;1&amp;&amp;v%k&lt;!f[f[-~j*k]=k]?p[j-1]%k&lt;1^p[j+1]%k&lt;1:1))&amp;&amp;p:!p.includes(i)&amp;&amp;f(n,0,...p,i)||i-n&amp;&amp;f(n,1+i,...p)
 </code></pre>
 <p><a href="https://tio.run/##fY/NisMgFIX3fQqzmKCNOrXLNrYPElIoqQ5qUMmPMNTJq2duCXQxi1ndwweH@x17T/exG0ycmA8Pta5aYk@NPFDOeSTyIj5j49tr5Cqp4RvjRC3Qwuac6mN@45k6wO4iyjJ9uLrQjW7YYveulQ7ajWWiBS5uEKstngQhZRlPReTGd/38UCM2QDQIbO@pITkb5jcmKrNJrToMuFcT8kgicYZTwz1AqCqCnjuEuuDH0Cvehy8oImgTct79rBZ2JQkKLYUFrwF/F7zlwX1hC@gL@s@AXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Store non-prime in <code>f</code></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES7), 178 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES7), 178 bytes</h1>
 <p>A quick attempt during my vacation. No time to golf this further.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,m=(o=0,2**n-1),...p)=&gt;m?(n=i=&gt;m&gt;&gt;i?n(-~i,m&amp;1&lt;&lt;i&amp;&amp;f(0,m^1&lt;&lt;i,...p,i)):o)(0):p.every((v,i)=&gt;(g=k=&gt;k&gt;v?1:v%k?g(k+1):(!(p[i-1]%k)^((q=p[i+1])+1&amp;&amp;!(q%k)))&amp;g(k,v/=k))(2))&amp;!o?o=p:o
 </code></pre>
 <p><a href="https://tio.run/##HY/BbsIwEETvfIVzwNoljhtzDFn7QyqQEHUik8Q2AVmqqvbX021P781oLnO/luvztob8amL68Ns2EES1ECRq1fFwiI1BpbXOSHZxECkwrQ0uQvMT1CJN3wcpB2jVcvnz/7EKiF1CaLHL2he/fgIULsnCSBPZyRZnurKf3AhTbbCDCvJ7aMx5P@EF4EGcanPG2khZwYNbRMlbVd6IHY4cq@QS5S5tQ1ph9i8RBQlzYvTMlqWuUXzthLil@Eyz13Ma@ZwYICKedt/bLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>106</s> 105 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>106</s> 105 bytes</h1>
 <pre><code>ＮθＦ…²φＦ⬤υ﹪ικ⊞υι≔Ｅ⊕θΦυ∧ι¬﹪ιλη≔Ｅη⟦κι⟦⟧⟧ζＦζ«≔⊟ιδ≔⊟ιεＦ⊕θ¿¬∨№ικ⊙ε﹪κλ¿⬤δ﹪κλ⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧»Ｉ⌊Φζ›Ｌιθ
 </code></pre>
 <p><a href="https://tio.run/##XVBBasMwEDzXr9jjClQovZWcTKDFEKem9GZ8UG3FFpalRJZKk9K3uysnaXEEks3M7uzs1J1wtRV6mjKzD34bhg/p8MBWyc46wDdhWomPHHaMwYykWmPgkNsmaIuKQ8@IKsLYRVhRYzqOqjWYiz1mpnZykMbLhjQ5PCvtSZ4KU9PE5q31@C@lWTwcuqVKx6HsSZs@VUX06eruxOA7ubtUFnaPitiG2FtMRmxuWTpioHaA0cSrw7UNxp83iv6OKP/W7K/e5voYQXPLnSM4cSh0GHF@yr6KiXB4l84Id8TUZ6aRX3HGA8FlrgyVXdHuPFnGS41lSc@Cq2jMKvlJCqfI6FqMlJ0yaggDXoKl8S9Oivi7kab13bz9Yba@mqan6f5T/wI" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Trying an &quot;efficient&quot; (it used to be able to reach <code>n=10</code> before I finished golfing; <a href="https://tio.run/##XVBBbsIwEDw3r/BxLbkS7ZVTilSEVGiEekM5uGRJrDg2ODYqVH17unagFUSK7OzMTmZm20i3tVIPw8Lsg1@F7hMdHPg021nHYC1NjfAs2I5zlia51hAEW9oqaAtKsJYTVIS@iWNFi3nfq9rAUu5hYbYOOzQeK9IU7FVpT/JEzE0Vl1fWw7@U5vERrLlVaQTbtKRNR1kSfL66O3P2nT1cmIXdgyK0IvR@hnGWVm4dcaZ2DKKJdwczG4wfE0V/J8C/mO3VW@LHCqp7bKzgLFihQx9VPtAZ6U7wInuM3xM@xlgqQ4TcL0yFXzFbmwzSW46EDZ03cEny0@wnK5wigzPZU2fKqC50qZ5LqfTruUMZr29oat@k5IfY5xqP6KKLlGE6DE@T4fGofwE" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a>) algorithm first that can reach <code>n=9</code> on TIO.</p>
@@ -98,7 +104,7 @@
 </code></pre>
 <p>Find the lexicographically earliest permutation that satisfies the conditions.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 224 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 224 bytes</h1>
 <pre><code>import cp.
 f(N)=A,N&lt;17=&gt;A=new_list(N+1),A::0..N,A.all_distinct,table_in(zip(A,A[2..N+1],A[3..N+1]++[1]),[{X,Y,Z}:X in 0..N,Y in 0..N,Z in 0..N,foreach(P in[2,3,5,7,11,13])Y&lt;1;Y mod P&gt;0;X*Z mod P&lt;1,(X+Z)mod P&gt;0 end]),A.solve.
 </code></pre>
@@ -136,7 +142,7 @@ f(N)=A,N&lt;17=&gt;A=new_list(N+1),A::0..N,A.all_distinct,table_in(zip(A,A[2..N+
 <li>Finally <code>A.solve</code> invokes the CP solver to instantiate A with the first solution found, if any.</li>
 </ul>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 24 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 24 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.ṭ2ịÆfȧḍ¥€Ʋ3ƤḄ3ḍȦ
 ŻŒ!ÇƇḢ
 </code></pre>
@@ -167,7 +173,7 @@ f(N)=A,N&lt;17=&gt;A=new_list(N+1),A::0..N,A.all_distinct,table_in(zip(A,A[2..N+
                 Ạ - any and all?
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, 181 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, 181 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda n:next(l for l in i.permutations(range(n+1))if all(all((a%f&gt;0)^(c%f&gt;0)for f in sympy.factorint(b)if f)for(a,b),(_,c)in p(p(l+(1,)))))
 import itertools as i,sympy
 p=i.pairwise
