--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240806T133932Z
+"   /golfscore                                      20240806T141821Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/70916.html">Tips for golfing in Jelly                       : 0070916</a>
 <a href="q/176966.html">Golf a number bigger than Loaders number        : 0176966</a>
 <a href="q/274665.html">Lexicographically earliest permutation of the in: 0274665</a>
 <a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
