--- a/q/20686.html
+++ b/q/20686.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>296</td><td>JavaScript NodeJS</td><td>240804T041340Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/274662#274662">noodle p</a></td></tr>
+<tr d-ix="0"><td>292</td><td>JavaScript NodeJS</td><td>240804T041340Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/274662#274662">noodle p</a></td></tr>
 <tr d-ix="1"><td>464</td><td>Javascript+jQuery ASCII Art  571 524 491</td><td>140308T060752Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/23452#23452">Robin</a></td></tr>
 <tr d-ix="2"><td>332</td><td>C</td><td>180817T133256Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/170778#170778">Peter Le</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>Color Animation and Physics Pure JavaScript</td><td>180622T044356Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/167278#167278">ei2</a></td></tr>
@@ -34,13 +34,13 @@
 <tr d-ix="5"><td>1024</td><td>Floppy Dragon</td><td>140213T165001Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/20810#20810">xem</a></td></tr>
 <tr d-ix="6"><td>997</td><td>Javascript + jQuery</td><td>140213T123618Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/20785#20785">Michael </a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (NodeJS), <s>299</s> 296 bytes</h1>
-<pre class="lang-javascript prettyprint-override"><code>require('readline').emitKeypressEvents(p=process.stdin);p.setRawMode(1)
-p.on('keypress',_=&gt;v=.8)
-s=x=y=v=z=0
-setInterval(c=&gt;{x=x?x-.5:y&lt;z|y&gt;z+2?X:(z=5+new Date%15,s++,15)
-y&gt;25|y&lt;0?X:c.clear(y-=v-=.1)
-for(i=0;i&lt;25;i++)c.log((-~y-i?'':''+s).padEnd(x)+(i&gt;z&amp;i&lt;z+3?'':'|').padEnd(15)+'|')},40,console)
+<div id="pu0" class="pu"><h1>JavaScript (NodeJS), <s>299</s> <s>296</s> 292 bytes</h1>
+<pre class="lang-javascript prettyprint-override"><code>require('readline').emitKeypressEvents(P=process.stdin);P.setRawMode(1)
+P.on('keypress',_=&gt;v=.8)
+s=x=y=v=p=0
+setInterval(c=&gt;{x=x?x-.5:y&lt;p|y&gt;p+2?X:(p=5+new Date%15,s++,15)
+y&gt;25?X:c.clear(y-=v-=.1)
+for(i=0;i&lt;25;i++)c.log((-~y-i?'':''+s).padEnd(x)+(i&gt;p&amp;i&lt;p+3?'':'|').padEnd(15)+'|')},40,console)
 </code></pre>
 <p>Play by pressing any key. The process ends with an error when you fail.</p>
 <p>If you have NodeJS installed, I encourage you to try it out! See if you can beat my high score of 14.</p>
