--- a/q/219576.html
+++ b/q/219576.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>UiuaSBCS</td><td>240806T061717Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/274721#274721">Europe20</a></td></tr>
-<tr d-ix="1"><td>057</td><td>Setanta</td><td>240806T052023Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/274719#274719">bb94</a></td></tr>
+<tr d-ix="0"><td>043</td><td>Setanta</td><td>240806T052023Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/274719#274719">bb94</a></td></tr>
+<tr d-ix="1"><td>008</td><td>UiuaSBCS</td><td>240806T061717Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/274721#274721">Europe20</a></td></tr>
 <tr d-ix="2"><td>019</td><td>BBC BASIC</td><td>210226T154527Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/219839#219839">int 21h </a></td></tr>
 <tr d-ix="3"><td>009</td><td>Brachylog</td><td>240627T115557Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/273824#273824">Fatalize</a></td></tr>
 <tr d-ix="4"><td>060</td><td>Morsecco</td><td>231117T095451Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/266840#266840">Philippo</a></td></tr>
@@ -200,7 +200,13 @@
 <tr d-ix="171"><td>033</td><td>Python 3</td><td>210223T155144Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/219581#219581">Wasif</a></td></tr>
 <tr d-ix="172"><td>018</td><td>Powershell</td><td>210223T155001Z</td><td><a href="https://codegolf.stackexchange.com/questions/219576/print-0-to-100-without-1-9-characters/219580#219580">Wasif</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 8 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>57</s> 43 bytes</h1>
+<p><em>−14 bytes using Uiua’s approach.</em></p>
+<pre><code>p:=pi@mata le i idir(0,p*p*p*p+p)scriobh(i)
+</code></pre>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDIyP6HCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 8 bytes</h1>
 <pre><code>⇡⌈+πⁿ⌈ππ
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_4__4oeh4oyIK8-A4oG_4oyIz4DPgAo=" rel="nofollow noreferrer">Try it here!</a></p>
@@ -212,11 +218,6 @@
  ⌈       rounds up, leaving with 101
 ⇡        range
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 57 bytes</h1>
-<pre><code>a:=fad@&quot;a&quot;le i idir(0,go_uimh(nasc@[a,a](&quot;0&quot;)))scriobh(i)
-</code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICIuMGNCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.bbcbasic.net/bbcsdl/" rel="nofollow noreferrer">BBC BASIC</a>, <s>29</s> 19 bytes</h1>
 <p>I have revisited my first answer that I have posted more than 3 years ago and found out that the bytecount could be significantly reduced:</p>
