--- a/q/274690.html
+++ b/q/274690.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>MATLAB</td><td>240806T120345Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274730#274730">rst</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Brachylog</td><td>240806T082821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274727#274727">Fatalize</a></td></tr>
-<tr d-ix="2"><td>030</td><td>Ruby</td><td>240806T070523Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274724#274724">G B</a></td></tr>
-<tr d-ix="3"><td>029</td><td>R</td><td>240805T133004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274701#274701">pajonk</a></td></tr>
-<tr d-ix="4"><td>043</td><td>Windows Batch</td><td>240806T063618Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274723#274723">user3141</a></td></tr>
-<tr d-ix="5"><td>041</td><td>Bash</td><td>240805T233522Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274717#274717">Digital </a></td></tr>
+<tr d-ix="0"><td>037</td><td>Bash</td><td>240805T233522Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274717#274717">Digital </a></td></tr>
+<tr d-ix="1"><td>041</td><td>MATLAB</td><td>240806T120345Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274730#274730">rst</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Brachylog</td><td>240806T082821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274727#274727">Fatalize</a></td></tr>
+<tr d-ix="3"><td>030</td><td>Ruby</td><td>240806T070523Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274724#274724">G B</a></td></tr>
+<tr d-ix="4"><td>029</td><td>R</td><td>240805T133004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274701#274701">pajonk</a></td></tr>
+<tr d-ix="5"><td>043</td><td>Windows Batch</td><td>240806T063618Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274723#274723">user3141</a></td></tr>
 <tr d-ix="6"><td>146</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
 <tr d-ix="7"><td>041</td><td>Red</td><td>240805T215259Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274716#274716">chunes</a></td></tr>
 <tr d-ix="8"><td>005</td><td>Japt</td><td>240805T213825Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274715#274715">Shaggy</a></td></tr>
@@ -54,7 +54,14 @@
 <tr d-ix="25"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="26"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uk.mathworks.com/products/matlab.html" rel="nofollow noreferrer"><strong>MATLAB</strong></a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 37</h1>
+
+<pre class="lang-bash prettyprint-override"><code>(($(eval printf %s +\$[$1**3] ^ $1)))
+</code></pre>
+<p>This script takes a single quoted brace-enclosed, comma-separated list as input.   e.g. <code>./cubeconcat.sh &quot;{1,5,3}&quot;</code>.  It returns a shell exit code: 1 for TRUE, 0 for FALSE.</p>
+<p><a href="https://tio.run/##VY3basMwDIbv/RSieDRpRWfHcZqybrvqrgYduxs7gOt4uNDFI8kOEPLsmbzRQUFIv6RPv3am9aM1HVyB/dg5G2pqFq2H9Rqmm@3NdEwSnrhPc4D3Zl93r3DWwvyJP3I5m6lneAEu0zQdCWXWv4UKzLz5PvVi7MvvDw4aZ6oLqAID6FzbXfL7zd3tA3WL89PfE95HYJjQzlkfgF@zKtSOjb1EjWpgfYYZyihyFLikKgUJcRQyIkSUqFckVyVmFL9cUaAWApWK1yWNtSoxX2ZxR6Z/nhoLqsXR8v8mj74ifqA8sB8" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uk.mathworks.com/products/matlab.html" rel="nofollow noreferrer"><strong>MATLAB</strong></a>, 41 bytes</h1>
 <pre><code>f=@(x)sum(x.^3)==str2num(sprintf('%d',x))
 </code></pre>
 <p>An @-function that accepts input as column vector.</p>
@@ -68,7 +75,7 @@ ans =
   0
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 7 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 7 bytes</h1>
 <pre><code>^₃ᵐ+~c?
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/P@5RU/PDrRO065Lt//@PtjCy0DE1ttAxMTeKBQA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -78,19 +85,19 @@ ans =
     ~c?    …can be deconcatenated into the original input list
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 30 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 30 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;a{a.sum{|x|x**3}.to_s==a*''}
 </code></pre>
 <p><a href="https://tio.run/##ZY7NCoMwEITvfQrxIshGNr/Gg30RCSU9eCstVUFRnz1dSxNaCsvCN8zO7HO6LqFvAzv71VfDdFu3eZvLUu7VeL8MbevLotjDI@u7joMA6dzpDQo0mAgGEDACNwY0IkipoiQIEWgfwjQOWc4Yyz92Ckqpgir4VwdCnWLxp@Qgns7oyoJuIjcWBE39/1LKtmTQ0oKqhXPhBQ" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>30</s> 29 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>30</s> 29 bytes</h1>
 <p><em>Edit: -1 byte thanks to <a href="https://codegolf.stackexchange.com/users/78274/kirill-l">@Kirill L.</a>.</em></p>
 <pre class="lang-r prettyprint-override"><code>\(x)x^2%*%x==Reduce(paste0,x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VZBBDoIwEEXD1lPUGBKqY2hnKJQFl3BtSAzC2igkvYsbNPEYXsTTOEAxmDS__e2fmZfeH9f-2RSvrm329n2MnHQlhtvQFcWhPndVHV1Ot7ZW4OSU-QRBE1WRBgMk5UbEsdAliZ0woxJrIbSh1ZBCQNAcG00CCjJ_1oqNWhrtDXKFBZN7m1tAXr-6NAWjFBDNXS0_G7KQZMg3U4in_rPhgo1QrJkQyUMZSH2rdMn0G5TMYGrAZJX-J_p-2r8" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Batch_file" rel="nofollow noreferrer">Windows Batch</a>, 43 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Batch_file" rel="nofollow noreferrer">Windows Batch</a>, 43 bytes</h1>
 <pre><code>cmd/cset/a%1*%1*%1+%2*%2*%2+%3*%3*%3-%1%2%3
 </code></pre>
 <p>Prints 0 for truthy, &lt;&gt;0 for falsy.</p>
@@ -104,12 +111,6 @@ ans =
 echo %x%
 </code></pre>
 <p><code>set /a</code> used interactively inside a cmd prompt (or passed with /c) prints the result directly.</p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 41</h1>
-
-<pre class="lang-bash prettyprint-override"><code>f()(($(eval printf %s +\$[$1**3] == $1)))
-</code></pre>
-<p><a href="https://tio.run/##RY0xT8MwEIV3/4o3GCkpN9hxnKaqMjCUqQMqMCBgCOSsRIoS1EQwVP3t4QwqSJbv3fN7n9/qqV2@2q5nHLlutmhGBcw8zZU@7O72T0tI0iTRCX/WPT6O3TAHXE24ftHP2q5W7hVVBW3TNF2ALiBAx/YWc8uDoAB@b0c8HB53snE/8b95e7O/j27oVDMOrJaTJU/urE4ZZWSjyMnQWqY1IsxF2BiRREl@I3JTUibnJ1cU5I0h52K7FNu7kvJ1Ft8E@sv0VMgsLsi/Th65Jv4g91l9Aw" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu6" class="pu"><h1>C++, <s>186</s> <s>165</s> 146 bytes</h1>
 <pre><code>#include&lt;iostream&gt;
