--- a/q/274690.html
+++ b/q/274690.html
@@ -59,6 +59,11 @@
 <pre><code>qsjkQsm**
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/v7A4KzuwOFdL6///aBMdAx3zWAA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
+<p>First time golfing in Pyth, so this might be not optimal.</p>
+<p>Explanation:</p>
+<p><code>sm**</code> calculates the sum of the cubes;</p>
+<p><code>jkQ</code> joins the list elements into a string and <code>s</code> converts the result to a number;</p>
+<p><code>q</code>: are the values equal?</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 37</h1>
 
