--- a/q/274690.html
+++ b/q/274690.html
@@ -60,7 +60,7 @@
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/v7A4KzuwOFdL6///aBMdAx3zWAA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
 <p>First time golfing in Pyth, so this might be not optimal.</p>
-<p>Explanation:</p>
+<h3>Explanation:</h3>
 <p><code>sm**</code> calculates the sum of the cubes;</p>
 <p><code>jkQ</code> joins the list elements into a string and <code>s</code> converts the result to a number;</p>
 <p><code>q</code>: are the values equal?</p>
