--- a/q/274690.html
+++ b/q/274690.html
@@ -64,7 +64,7 @@
 <pre><code>f(a,b,c)=a**3+b**3+c**3==&quot;&quot;.a.b.c
 </code></pre>
 <p><a href="https://tio.run/##bYzNTsMwEITveYqRL41TY/knTpNKvvIE3ICDk7agKriRk4B4@mAHCRGBZjWr3dn9Xvw89LdpmSyRMNBQUVKjhMABUiBpbRIqJjVMg6aGihXzqoIRAlpr1HFldI3yoNYnQTKfoAqJZlBFrZyfnxJKpE10ko1nDGF3t1suuWMt66h1RaH3bbIumrWEcMdb3i1DyIMlD2GeXj/x7vr5PB6fPGHj/PZ4teLYPMc88Ev@cQunfGK6uO4lZb8mtZk0pZyAsHgTaPZNv3f9@C@83MD9Bu43cP8XvnwB" rel="nofollow noreferrer" title="gnuplot – Try It Online">Try it online!</a></p>
-<p>A function that inputs 3 integer values and outputs <code>1</code> if their sum of cubes is equal to  the concatenation of those numbers, oherwise the output is <code>0</code>.</p>
+<p>A function that inputs 3 integer values and outputs <code>1</code> if their sum of cubes is equal to  the concatenation of those numbers, otherwise the output is <code>0</code>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 15 bytes</h1>
 <pre><code>;(=1#.^&amp;3)&amp;:&quot;.&gt;
