--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240807T110745Z
+"   /golfscore                                      20240807T133429Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/269835.html">How quickly can you type this string?           : 0269835</a>
 <a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
 <a href="q/1294.html">Determine whether strings are anagrams          : 0001294</a>
 <a href="q/105998.html">Recreate the ASCII-table as an ASCII-table      : 0105998</a>
