--- a/q/105998.html
+++ b/q/105998.html
@@ -63,6 +63,45 @@
 íUmd)vÆ`Spa­`ÃoÆ&quot;DEL&quot;ÃòH Ëú4 i&quot;DCehcr &quot;ó)m¸úBÃÕmqSi|)i1'-p34
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=SPIjfwrtVW1kKXbGYFNwYa1gw2/GIkRFTCLD8kggy/o0IGkiRENlaGNyICLzKW24%2bkLD1W1xU2l8KWkxJy1wMzQ" rel="nofollow noreferrer">Test it</a></p>
+<pre><code>Hò#\níUmd)vÆ`Spa­`ÃoÆ&quot;DEL&quot;ÃòH Ëú4 i&quot;DCehcr &quot;ó)m¸úBÃÕmqSi|)i1'-p34
+H                                                                     :32
+  #                                                                  :127 (note the unprintable after the #)
+ ò                                                                    :Range [32,127]
+    \n                                                                :Assign to variable U
+      í                                                               :Interleave with
+       Um                                                             :  Map U
+         d                                                            :    Character at each codepoint
+          )                                                           :End interleave
+           v                                                          :Modify first element
+            Æ                                                         :  Modify last element
+             `Spa­`                                                    :    Compressed string &quot;Space&quot;
+                  Ã                                                   :End modify
+                   o                                                  :Modify last element
+                    Æ                                                 :  Modify last element
+                     &quot;DEL&quot;                                            :    Literal string &quot;DEL&quot;
+                          Ã                                           :End modify
+                           ò                                          :Partitions of length
+                            H                                         :  32
+                              Ë                                       :Map
+                               ú4                                     :  Right pad all with spaces to length 4
+                                  i                                   :  Prepend
+                                   &quot;DCehcr &quot;ó                         :    Uninterleave &quot;DCehcr &quot;
+                                             )                        :  End prepend
+                                              m                       :  Map
+                                               ¸                      :    Join with spaces
+                                                ú                     :  Right pad all with spaces to length
+                                                 B                    :    11
+                                                  Ã                   :End map
+                                                   Õ                  :Transpose
+                                                    m                 :Map
+                                                     q                :  Join with
+                                                      S               :    Space
+                                                       i|             :    Prepend &quot;|&quot;
+                                                         )            :End map
+                                                          i1          :Insert at 0-based index 1
+                                                            '-p34     :  &quot;-&quot; repeated 34 times
+                                                                      :Implicit output joined with newlines
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 253 bytes</h1>
 
